03-gateway/02-two-servers/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: my-gateway
spec:
  # The selector matches the ingress gateway pod labels.
  # If you installed Istio using Helm following the standard documentation, this would be "istio=ingress"
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: numbers
      protocol: HTTP
    hosts:
    - "numbers.example.com"
  - port:
      number: 80
      name: names
      protocol: HTTP
    hosts:
    - "names.example.com"
